--- a/lab-school/challenge1403203/style.css
+++ b/lab-school/challenge1403203/style.css
@@ -1,5 +1,26 @@
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+}
+
 .container{
-    display: flex;
-    justify-content: center;
+    display:inline-block;
+    justify-content:initial;
+    flex-direction:column-reverse;
     align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.header{
+    width: 100%;
+    height: 50%;
+    border:1px solid red;
+}
+
+.body{
+    width: 100%;
+    height: 50%;
+    border:1px solid red;
 }
