--- a/lab-school/challenge1403203/style.css
+++ b/lab-school/challenge1403203/style.css
@@ -5,22 +5,15 @@
 }
 
 .container{
-    display:inline-block;
-    justify-content:initial;
-    flex-direction:column-reverse;
+    display: flex;
+    justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%;
 }
 
-.header{
+.col{
     width: 100%;
-    height: 50%;
+    height: calc(100% / 3);
     border:1px solid red;
-}
-
-.body{
-    width: 100%;
-    height: 50%;
-    border:1px solid red;
+    height: 100%;
 }
